@@ -7,6 +7,16 @@ L["ChangeLog"] = [[
 <html>
 <body>
 <p>
+<lime>2016/08/30 v116 : </lime>
+</p><br/>
+<p>
+    1. 进入游戏后，背包视图将自动按照顺序延时加载，这样避免第一次打开背包视图时的卡顿问题。新的刷新机制加入，避免卡顿。
+</p>
+<p>
+    2. 为了避免进入游戏时就处于战斗状态，现在加入了一个默认的整合背包视图，无法修改和删除，这个视图会在游戏进入时加载，确保物品使用没有问题。
+</p>
+<br/><br/>
+<p>
 <lime>2016/08/28 v114 : </lime>
 </p><br/>
 <p>
