@@ -7,6 +7,16 @@ L["ChangeLog"] = [[
 <html>
 <body>
 <p>
+<lime>2016/08/30 v116 : </lime>
+</p><br/>
+<p>
+    1. 進入遊戲後，背包視圖將自動按照順序延時加載，這樣避免第壹次打開背包視圖時的卡頓問題。新的刷新機制加入，避免卡頓。
+</p>
+<p>
+    2. 爲了避免進入遊戲時就處于戰鬥狀態，現在加入了壹個默認的整合背包視圖，無法修改和刪除，這個視圖會在遊戲進入時加載，確保物品使用沒有問題。
+</p>
+<br/><br/>
+<p>
 <lime>2016/08/28 v114 : </lime>
 </p><br/>
 <p>
